--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "radpay",
+  "name": "directorix",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
@@ -12,10 +12,12 @@
     "dotenv": "^6.0.0",
     "ejs": "^2.6.1",
     "express": "^4.16.3",
+    "express-session": "^1.15.6",
     "mongoose": "^5.2.7",
     "mongoose-findorcreate": "^3.0.0",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
+    "radixdlt-js-lite": "^0.1.8",
     "request": "^2.88.0"
   }
 }
